--- a/src/MAIL/1.MailSamples/App.config
+++ b/src/MAIL/1.MailSamples/App.config
@@ -2,6 +2,6 @@
 <configuration>
 	<appSettings>
 		<add key="SmtpUser" value="st007122@spbu.ru"/>
-		<add key="SmtpPwd" value="ooHoox4U"/>
+		<add key="SmtpPwd" value="****"/>
 	</appSettings>
 </configuration>
